--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "filepond": "^4.20.1",
+    "filepond-plugin-image-preview": "^4.6.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-filepond": "^7.1.0",
+    "react-scripts": "3.4.3",
+    "tesseract.js": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
